--- a/Rosydiah-latihan3.html
+++ b/Rosydiah-latihan3.html
@@ -31,11 +31,13 @@
         <h1> Pengertian</h1>
         <div class="info">
             <p>
-                <b> Buah adalah hasil reproduksi antara putik dan serbuk sari pada tumbuhan. Buah termasuk organ pada tumbuhan berbunga yang merupakan perkembangan lanjutan dari bakal buah (ovarium). Buah biasanya membungkus dan melindungi biji. Aneka rupa dan bentuk buah tidak terlepas kaitannya dengan fungsi utama buah, yakni sebagai pemencar biji tumbuhan. Buah dalam lingkup pertanian (hortikultura) atau pangan biasanya disebut sebagai buah-buahan. Buah dalam pengertian ini tidak terbatas yang terbentuk dari bakal buah, melainkan dapat pula berasal dari perkembangan organ yang lain. Oleh karena itu, untuk membedakannya, buah menurut pengertian botani biasa disebut buah sejati. Buah sering kali memiliki nilai ekonomi sebagai bahan pangan maupun bahan baku industri karena di dalamnya disimpan berbagai macam produk metabolisme tumbuhan, mulai dari karbohidrat, protein, lemak, vitamin, mineral, alkaloid, hingga terpena dan terpenoid. Ilmu yang mempelajari segala hal tentang buah dinamakan pomologi.</b>
+               <b> Buah adalah bagian tumbuhan yang berkembang dari bunga setelah proses penyerbukan. Biasanya, buah memiliki biji di dalamnya yang berperan sebagai alat reproduksi tumbuhan. Buah ada dalam berbagai bentuk, ukuran, dan rasa, dan merupakan sumber makanan yang kaya nutrisi untuk manusia dan hewan.</b>
             </p>
-            <br>
+            <p> Menurut pengertian dari wikipedia :</p>
+            <blockquote cite="https://id.wikipedia.org/wiki/Buah"> Buah adalah hasil reproduksi antara putik dan serbuk sari pada tumbuhan. Buah termasuk organ pada tumbuhan berbunga yang merupakan perkembangan lanjutan dari bakal buah (ovarium). Buah biasanya membungkus dan melindungi biji. Aneka rupa dan bentuk buah tidak terlepas kaitannya dengan fungsi utama buah, yakni sebagai pemencar biji tumbuhan.Buah dalam lingkup pertanian (hortikultura) atau pangan biasanya disebut sebagai buah-buahan. Buah dalam pengertian ini tidak terbatas yang terbentuk dari bakal buah, melainkan dapat pula berasal dari perkembangan organ yang lain. Oleh karena itu, untuk membedakannya, buah menurut pengertian botani biasa disebut buah sejati.</blockquote>
             <br>
         <h1> Manfaat</h1>
+        <div class="info">
         <ol>
             <img src="images3/manggis.jpg" style="width: 300px; height: 200px;">
             <br>
@@ -56,7 +58,7 @@
             <br>
             <li> Menjaga Tubuh Tetap Bugar</li>
             <p> Menurut WHO, seseorang memerlukan asupan serat sebesar 25-29 g setiap harinya untuk mendapatkan tubuh yang sehat dan bugar. Di samping itu, serat juga baik untuk kesehatan usus, mulai dari mencegah masalah sembelit, wasir, dan divertikulosis. Nah, asupan serat ini bisa kamu dapatkan di berbagai buah.</p>
+            <a href="https://yankes.kemkes.go.id/view_artikel/2682/berbagai-manfaat-buah-buahan" target="_blank">sumber referensi</a>
         </ol>
 </body>
-
 </html>
