--- a/latihan5.html
+++ b/latihan5.html
@@ -10,7 +10,7 @@
 <div class="container">
         <h1> Pengertian</h1>
             <p> Cerita rakyat adalah cerita-cerita tentang masa lampau atau zaman terdahulu yang biasanya diwariskan atau diceritakan kepada generasi-generasi yang lebih muda. Bisa dikatakan bahwa cerita rakyat ini merupakan warisan budaya dari generasi-generasi terdahulu yang disampaikan secara lisan.
-            Sebagian besar cerita rakyat ini bersifat fiktif dan masih belum tentu kebenarannya. Namun demikian, banyak nilai-nilai yang terkandung di dalam cerita rakyat. Nilai-nilai tersebut dapat dijadikan pelajaran bagi generasi yang lebih muda.  Dengan kata lain, cerita rakyat menjadi salah satu sarana mengajarkan nilai budi pekerti luhur. Beberapa contoh cerita rakyat yang sering dijadikan bahan ajar antara lain; Cerita Malin Kundang, Legenda Danau Toba, Legenda Rawa Pening, dan masih banyak yang lainnya.</p>
+            Sebagian besar cerita rakyat ini bersifat fiktif dan masih belum tentu kebenarannya. Namun demikian, banyak nilai-nilai yang terkandung di dalam cerita rakyat. Nilai-nilai tersebut dapat dijadikan pelajaran bagi generasi yang lebih muda.  Dengan kata lain, cerita rakyat menjadi salah satu sarana mengajarkan nilai budi pekerti luhur. Beberapa contoh cerita rakyat yang sering dijadikan bahan ajar antara lain : Cerita Malin Kundang, Legenda Danau Toba, Legenda Rawa Pening, dan masih banyak yang lainnya.</p>
 
         <h1> Fungsi Cerita Rakyat</h1>
             <p>1. Sarana hiburan. Dengan mendengarkan cerita rakyat, sepeti dongeng, mite atau legenda, kita sekan-akan diajak berkelana ke alam lain yang tidak kita jumpai dalam pengalaman hidup sehari-hari.
